--- a/lab-Marshall/package.json
+++ b/lab-Marshall/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "devDependencies": {
     "chai": "^3.5.0",
-    "cowsay": "^1.1.8",
+    "gulp-eslint": "^3.0.1",
     "mocha": "^2.5.3"
+  },
+  "dependencies": {
+    "cowsay": "^1.1.8"
   }
 }
