--- a/lab-Marshall/package.json
+++ b/lab-Marshall/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^2.2.0",
+    "gulp-watch": "^4.3.8",
     "mocha": "^2.5.3"
   },
   "dependencies": {
